--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Konstantin",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
@@ -29,6 +32,7 @@
   "dependencies": {
     "core-js": "^3.33.2",
     "lodash": "^4.17.21",
-    "path-browserify": "^1.0.1"
+    "path-browserify": "^1.0.1",
+    "gh-pages": "^3.1.0"
   }
 }
